--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="member_bank"> Bank Account </string>
     <string name="meber_gender_text"> Gender </string>
 
+
     <string name="member_reset"> RESET </string>
     <string name="member_submit"> SUBMIT </string>
 
@@ -22,5 +23,8 @@
     <string name="member_delete"> DELETE </string>
     <string name="member_edit">EDIT</string>
     <string name="done"> DONE </string>
+    <string name="deleteMember">Are you sure you want to delete the member?</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
     <string name="title_activity_member_list">MemberList</string>
 </resources>
